--- a/profiles/apparmor/profiles/extras/usr.lib.man-db.man
+++ b/profiles/apparmor/profiles/extras/usr.lib.man-db.man
@@ -61,6 +61,7 @@
   /usr/share/man/** r,
   /usr/share/terminfo/** r,
   /usr/share/texmf/teTeX/man/** r,
+  /usr/share/postgresql/*/man/** rk,
 
   /var/cache/man/** rk,
 
