--- a/utils/po/id.po
+++ b/utils/po/id.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: apparmor\n"
 "Report-Msgid-Bugs-To: AppArmor list <apparmor@lists.ubuntu.com>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2017-02-21 06:33+0000\n"
-"Last-Translator: Ari Setyo Wibowo <mr.a.contact@gmail.com>\n"
+"PO-Revision-Date: 2017-10-10 18:33+0000\n"
+"Last-Translator: Christian Boltz <Unknown>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-22 05:32+0000\n"
-"X-Generator: Launchpad (build 18326)\n"
+"X-Launchpad-Export-Date: 2017-10-11 05:15+0000\n"
+"X-Generator: Launchpad (build 18474)\n"
 "Language: id\n"
 
 #: ../aa-genprof:56
@@ -1035,11 +1035,11 @@ msgstr "(L)ebih"
 
 #: ../apparmor/ui.py:225
 msgid "Audi(t)"
-msgstr "(A)udit"
+msgstr "Audi(t)"
 
 #: ../apparmor/ui.py:226
 msgid "Audi(t) off"
-msgstr "(A)udit nonaktif"
+msgstr "Audi(t) nonaktif"
 
 #: ../apparmor/ui.py:227
 msgid "Audit (A)ll"
@@ -1191,7 +1191,7 @@ msgstr "(A)baikan Pembaruan"
 
 #: ../apparmor/ui.py:266
 msgid "Save Selec(t)ed Profile"
-msgstr "(S)impan Profil Terpilih"
+msgstr "Simpan Profil (T)erpilih"
 
 #: ../apparmor/ui.py:267
 msgid "(U)pload Changes"
