parser: Add option to print the cache directory
The --print-cache-dir option can be used to have the parser print the
value of the cache directory that is specific to the features used (from
the current kernel, the --match-string option, or the --features-file
option). After printing the path, apparmor_parser will exit. This is
helpful because the final component in the path will become
unpredictable because it will be based on arbitrary hash function
output.

Signed-off-by: Tyler Hicks <tyhicks@canonical.com>
Acked-by: John Johansen <john.johansen@canonical.com>

--- a/parser/apparmor_parser.pod
+++ b/parser/apparmor_parser.pod
@@ -236,6 +236,13 @@ inconsistent state
 Set the location of the cache directory.  If not specified the cache location
 defaults to /etc/apparmor.d/cache
 
+=item --print-cache-dir
+
+Print the cache directory location. This path will be a subdirectory of the
+directory specified by --cache-loc. The subdirectory used will be influenced by
+the features available in the currently running kernel or by the features
+specified with the --match-string or --features-file options.
+
 =item -Q, --skip-kernel-load
 
 Perform all actions except the actual loading of a profile into the kernel.
