--- a/libraries/libapparmor/doc/aa_features.pod
+++ b/libraries/libapparmor/doc/aa_features.pod
@@ -136,6 +136,9 @@ I<aa_features> family of functions that return -1 on error.
 All aa_features functions described above are present in libapparmor version
 2.10 and newer.
 
+aa_features_unref() saves the value of errno when called and restores errno
+before exiting in libapparmor version 2.12 and newer.
+
 =head1 BUGS
 
 None known. If you find any, please report them at
