--- a/utils/po/es.po
+++ b/utils/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: apparmor\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-14 19:29+0530\n"
-"PO-Revision-Date: 2017-05-02 14:26+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-24 13:01+0000\n"
+"Last-Translator: Rodrigo <rodhos_hp@hotmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-05-03 05:19+0000\n"
-"X-Generator: Launchpad (build 18366)\n"
+"X-Launchpad-Export-Date: 2017-11-25 05:12+0000\n"
+"X-Generator: Launchpad (build 18509)\n"
 
 #: ../aa-genprof:56
 msgid "Generate profile for the given program"
@@ -304,7 +304,7 @@ msgstr ""
 
 #: ../aa-complain:23
 msgid "Switch the given program to complain mode"
-msgstr ""
+msgstr "Cambia el programa dado al modo reclamar"
 
 #: ../aa-enforce:23
 msgid "Switch the given program to enforce mode"
@@ -355,7 +355,7 @@ msgstr ""
 #: ../apparmor/aa.py:264 ../apparmor/aa.py:548
 #, python-format
 msgid "Setting %s to complain mode."
-msgstr ""
+msgstr "Estableciendo %s al modo reclamar."
 
 #: ../apparmor/aa.py:271
 #, python-format
