add final kernel patches for 4.14 and 4.15
Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/kernel-patches/v4.14/README
+++ b/kernel-patches/v4.14/README
@@ -1,4 +1,4 @@
-This series is based on what is currently in linux-next scheduled for
-inclusion in 4.14
+This is based on v4.14 final
 
-af_unix-mediation is the last remaining patch that is out of tree
+base socket mediation and af_unix-mediation are the last two remaining
+patches that are out of tree
