remove subdomainfs support
It has been over 10 years since transition from subdomainfs to
using securityfs. Lets drop this deprecated code.

PR: https://gitlab.com/apparmor/apparmor/merge_requests/258
Signed-off-by: John Johansen <john.johansen@canonical.com>
Acked-by: seth.arnold@canonical.com

--- a/parser/apparmor.pod
+++ b/parser/apparmor.pod
@@ -212,7 +212,7 @@ Else, if auditd is running, see auditd(8) and auditd.conf(5).
 =head1 SEE ALSO
 
 apparmor_parser(8), aa_change_hat(2), apparmor.d(5),
-subdomain.conf(5), aa-autodep(1), clean(1),
+aa-autodep(1), clean(1),
 auditd(8),
 aa-unconfined(8), aa-enforce(1), aa-complain(1), and
 L<https://wiki.apparmor.net>.
